--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
+autopep8==1.6.0
 black==22.1.0
 click==8.0.3
 Flask==2.0.2
+Flask-Cors==3.0.10
 greenlet==1.1.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
+mysql-connector-python==8.0.28
 pathspec==0.9.0
 pep8==1.7.1
 platformdirs==2.4.1
+protobuf==3.19.4
+pycodestyle==2.8.0
+six==1.16.0
 SQLAlchemy==1.4.31
+toml==0.10.2
 tomli==2.0.0
 typing_extensions==4.0.1
 Werkzeug==2.0.2
